syntax = "proto3"; // 定义语法类型，通常proto3好于proto2，proto2好于proto1


option java_package = "com.upuphub.dew.community.connection.protobuf.common";      // 定义报名
option java_multiple_files = true;

message RpcResultCode{
    int32 code  = 1;
}